--- a/pizza.css
+++ b/pizza.css
@@ -19,7 +19,7 @@ body{
     margin: 5rem auto;
     background-color: #fae4ba;
     width: 300px;
-    height: 500px;
+    height: auto;
     border-radius: 2rem;
     box-shadow: 10px 10px 10px rgba(44, 44, 44,.2);
 
