--- a/pizza.css
+++ b/pizza.css
@@ -15,6 +15,7 @@ body{
 
 
 
+
 .main-container{
     margin: 5rem auto;
     background-color: #fae4ba;
@@ -45,6 +46,15 @@ body{
   transform: rotate(360deg);
 }
 
+.rotateL{
+transition: ease-in 2s;
+  transform: rotate(180deg);
+}
+
+.rotateR{
+transition: ease-in 2s;
+  transform: rotate(-180deg);
+}
 
 .page{
     display: flex;
