--- a/pizza.css
+++ b/pizza.css
@@ -119,7 +119,6 @@ transition: ease-in 1s;
 
 .btn-calculate{
    background-color: #e69729;
-   margin-top: 0;
 
 }
 .btn-calculate:hover{
@@ -130,6 +129,7 @@ transition: ease-in 1s;
 
 .btn-reset{
     background-color: grey;
+   margin-top: 0;
 
 }
 .btn-reset:hover{
@@ -204,12 +204,12 @@ transition: ease-in 1s;
 }
 
 .list-element:hover .list-element__img img{
-    transition: ease-in .5s;
-  transform: rotate(-20deg)
+    transition: ease-in .25s;
+  transform: scale(1.25)
   ;}
 
 .list-element__img img{
-    transition: ease-in .5s;
+    transition: ease-in .25s;
     height: 2rem;
 }
 .list-element__img img:hover .logo__img{
