--- a/pizza.css
+++ b/pizza.css
@@ -77,7 +77,7 @@ display: none;
     justify-content: space-between;
     align-items: center;
     width: 80%;
-    height: 3rem;
+    height: 2rem;
     background-color: lightgray;
     margin: .25rem;
     margin-right: 1rem;
@@ -119,7 +119,7 @@ display: none;
 }
 
 .input-element label{
-    margin: 10px 0px;
+    margin: 5px 0px;
     font-size: 1rem;
     font-weight: bold;
 }
@@ -144,7 +144,7 @@ display: none;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    margin: 1rem .5rem;
+    margin: .5rem;
     align-items: center;
 }
 
@@ -154,13 +154,13 @@ display: none;
 }
 
 .btn{
-    height: 3rem;
+    height: 2.5rem;
     border: none;
     width: 90%;
-    font-size: 1.4rem;
+    font-size: 1.2rem;
     cursor: pointer;
     border-radius: 1.5rem;
-    margin: 1rem;
+    margin: .5rem;
     color: white;
 }
 
@@ -191,7 +191,7 @@ display: none;
    background-color: black;
    margin: 0;
    width: 45%;
-   height: 2.5rem;
+   height: 2rem;
 border-radius: 1rem;
 
 }
@@ -208,7 +208,7 @@ border-radius: 1rem;
 
 #serving,#ball{
         border-radius: 0;
-        height:2.5rem;
+        height:2rem;
 }
 
 .btn-quantity:hover{
@@ -221,7 +221,7 @@ border-radius: 1rem;
     width: 100%;
     display: flex;
     justify-content: flex-end;
-    margin-top: 0px;
+    margin-top: -10px;
     margin-right:50px;
     margin-bottom: 1rem;
     transition: ease-in .5s;
@@ -286,6 +286,16 @@ border-radius: 1rem;
     background-color: rgb(51, 51, 51);
 }
 
+.dough-data{
+    display: flex;
+    width: 80%;
+    justify-content: space-between;
+    margin: 1rem;
+}
+
+.dough-data__element{
+    text-align: center;
+}
 
 footer{
     display: flex;
